--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,39 +6,69 @@ on:
       - main
 
 jobs:
-  build-test-deploy:
+  build:
     runs-on: windows-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    
+
     - name: Setup .NET Framework
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '6.x'  # Change to your desired .NET Framework version
-        
+
     - name: Restore NuGet packages
-      run: nuget restore ./WebApplication3.sln
-    
+      run: dotnet restore ./WebApplication3.sln
+
     - name: Build
-      run: msbuild ./WebApplication3.sln /p:Configuration=Release
-    
+      run: dotnet build ./WebApplication3.sln --configuration Release
+
+  test:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup .NET Framework
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '6.x'  # Change to your desired .NET Framework version
+
+    - name: Restore NuGet packages
+      run: dotnet restore ./WebApplication3.sln
+
     - name: Test
-      run: vstest.console.exe WebApplication3.Tests/bin/Release/WebApplication3.Tests.dll
-    
-    # Add additional steps for code quality checks, such as code coverage and analysis
-    
-    - name: Publish Artifact
-      run: |
-        mkdir publish
-        xcopy WebApp1/bin/Release publish /E /Y
-    
+      run: dotnet test ./WebApplication3.Tests/WebApplication3.Tests.csproj --configuration Release
+
+  deploy:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup .NET Framework
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '6.x'  # Change to your desired .NET Framework version
+
+    - name: Restore NuGet packages
+      run: dotnet restore ./WebApplication3.sln
+
+    - name: Build
+      run: dotnet build ./WebApplication3.sln --configuration Release
+
     - name: Deploy
       run: |
         # Add deployment steps here to deploy "WebApp" to the staging environment
-        
+
+  notify-on-failure:
+    runs-on: windows-latest
+    if: ${{ failure() }}
+
+    steps:
     - name: Notify on Failure
-      if: ${{ failure() }}
       run: |
         echo "Build or deployment failed for $GITHUB_REPOSITORY"
