--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,46 +19,31 @@ jobs:
         dotnet-version: '6.x'  # Change to your desired .NET Framework version
 
     - name: Restore NuGet packages
-      run: dotnet restore ./WebApplication3.sln
+      run: |
+        cd path/to/solution/folder  # Replace with the actual path to the folder containing WebApplication3.sln
+        dotnet restore WebApplication3.sln
 
     - name: Build
-      run: dotnet build ./WebApplication3.sln --configuration Release
+      run: |
+        cd path/to/solution/folder  # Replace with the actual path to the folder containing WebApplication3.sln
+        dotnet build WebApplication3.sln --configuration Release
 
   test:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Setup .NET Framework
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.x'  # Change to your desired .NET Framework version
-
-    - name: Restore NuGet packages
-      run: dotnet restore ./WebApplication3.sln
+    # Similar setup and restore steps as the 'build' job
 
     - name: Test
-      run: dotnet test ./WebApplication3.Tests/WebApplication3.Tests.csproj --configuration Release
+      run: |
+        cd path/to/solution/folder  # Replace with the actual path to the folder containing WebApplication3.sln
+        dotnet test WebApplication3.Tests/WebApplication3.Tests.csproj --configuration Release
 
   deploy:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Setup .NET Framework
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.x'  # Change to your desired .NET Framework version
-
-    - name: Restore NuGet packages
-      run: dotnet restore ./WebApplication3.sln
-
-    - name: Build
-      run: dotnet build ./WebApplication3.sln --configuration Release
+    # Similar setup and restore steps as the 'build' job
 
     - name: Deploy
       run: |
